--- a/package.json
+++ b/package.json
@@ -4,15 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.47",
-    "@types/react": "^16.14.24",
-    "@types/react-dom": "^16.9.14",
-    "@types/react-redux": "^7.1.23",
-    "@types/styled-components": "^5.1.24",
     "axios": "^0.26.1",
     "html-react-parser": "^1.4.8",
     "marked": "^4.0.12",
@@ -59,6 +50,15 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.20.47",
+    "@types/react": "^16.14.24",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-redux": "^7.1.23",
+    "@types/styled-components": "^5.1.24"
   }
 }
